--- a/form-company.html
+++ b/form-company.html
@@ -188,12 +188,14 @@
 
                                     </div>
 
-                                    <div>
-                                        <div class="calculator">
-                                            <h3 class="calculator-title display-none">Добавить номер
-                                                телефона</h3>
-                                            <button class="count-button plus" type="button"></button>
-                                            <button class="count-button minus" type="button"></button>
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <div class="calculator">
+                                                <h3 class="calculator-title display-none">Добавить номер
+                                                    телефона</h3>
+                                                <button class="count-button minus" type="button"></button>
+                                                <button class="count-button plus" type="button"></button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -337,20 +339,20 @@
 
                                         </div>
 
-                                        <div class="">
-                                            <div class="">
-                                                <div class="calculator ">
+                                        <div class="row">
+                                            <div class="col-12">
+                                                <div class="calculator m-order-1 d-order-0">
                                                     <h3 class="calculator-title display-none">Добавить номер
                                                         телефона</h3>
-                                                    <button class="count-button plus" type="button"></button>
                                                     <button class="count-button minus" type="button"></button>
+                                                    <button class="count-button plus" type="button"></button>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="">
-                                        <div class="  ">
-                                            <div class="input-checkbox">
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <div class="input-checkbox m-order-0 d-order-1">
                                                 <input type="radio" id="whats2" name="contact" value="whats_app">
                                                 <label for="whats2">WhatsApp</label>
                                                 <input type="radio" id="telegram2" name="contact" value="telegram">
@@ -544,7 +546,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-12">
+                        <div class="col-12 col-md-9">
                             <div class="calculator">
                                 <h3 class="add-education uppercase">Добавить</h3>
                                 <button class="count-button plus" type="button"></button>
@@ -575,24 +577,20 @@
 
                     <div class="body-block">
 
-                        <div class="row">
-                            <div class="col-6">
-                                <div class="photo-info">
-                                    <p class="description uppercase">загрузить
-                                        <img class="arrow" src="assets/images/row.svg" alt="">
-                                    </p>
+                        <div class="col-12 col-md-6">
+                            <div class="photo-info">
+                                <p class="description uppercase">загрузить
+                                    <img class="arrow" src="assets/images/row.svg" alt="">
+                                </p>
 
-                                    <p>Перетащите текстовой файл сюда в форматах – docx, txt, rtf, pdf</p>
-                                    <p>Вы можете одновременно загрузить от 1 до 3 текстовых файлов</p>
-                                </div>
-                                <div class="download">
-                                    <span class="circle"></span>
-                                    <span>файлы загружены</span>
-                                    <button class="download-button">фотогид</button>
-                                </div>
+                                <p>Перетащите текстовой файл сюда в форматах – docx, txt, rtf, pdf</p>
+                                <p>Вы можете одновременно загрузить от 1 до 3 текстовых файлов</p>
+                            </div>
+                            <div class="download">
+                                <span class="circle"></span>
+                                <span>файлы загружены</span>
                             </div>
                         </div>
-
                     </div>
                 </div>
 
@@ -656,8 +654,7 @@
                         <div class="body-block">
                             <div class="input-blocks">
                               <textarea class="textarea"
-                                        placeholder="Здесь вы можете написать о Вашей компании, например миссию и цель."
-                                        cols="35" rows="5"></textarea>
+                                        placeholder="Здесь вы можете написать о Вашей компании, например миссию и цель."></textarea>
                             </div>
                         </div>
                     </div>
