--- a/form-filmmaker.html
+++ b/form-filmmaker.html
@@ -564,7 +564,7 @@
             <div class="row">
                 <div class="col-12 col-md-9">
                     <div class="body-block">
-                        <h3 class="title underlined uppercase">дополнительное образование</h3>
+                        <h3 class="subtitle underlined uppercase">дополнительное образование</h3>
                     </div>
                 </div>
             </div>
@@ -694,7 +694,7 @@
                                 </div>
 
                                 <div class="calculator">
-                                    <p class="language-title">добавить язык</p>
+                                    <p class="calculator-title">добавить язык</p>
                                     <button class="count-button plus" type="button"></button>
                                     <button class="count-button minus" type="button"></button>
                                 </div>
@@ -767,7 +767,7 @@
 
                                 </div>
                                 <div class="calculator asd">
-                                    <h3 class="add-education uppercase education">добавить хобби</h3>
+                                    <h3 class="calculator-title  uppercase education">добавить хобби</h3>
                                     <button class="count-button plus" type="button"></button>
                                     <button class="count-button minus" type="button"></button>
                                 </div>
@@ -1266,11 +1266,14 @@
 
                                     </div>
 
-                                    <div>
-                                        <div class="calculator">
-                                            <button class="count-button plus" type="button"></button>
-
-                                            <button class="count-button minus" type="button"></button>
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <div class="calculator m-order-1 d-order-0">
+                                                <h3 class="add-title display-none">Добавить номер
+                                                    телефона</h3>
+                                                <button class="count-button minus" type="button"></button>
+                                                <button class="count-button plus" type="button"></button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
