--- a/login.html
+++ b/login.html
@@ -17,7 +17,10 @@
 
 <div class="container container-disable-on-mobile">
   <div class="header-box">
-    <a href="#" class="link-to-home"><img src="assets/images/logo.svg" alt=""></a>
+    <a href="#" class="link-to-home">
+      <img class="logo-desc" src="assets/images/logo.svg" alt="">
+      <img class="logo-sm" src="assets/images/logo-sm.svg" alt="">
+    </a>
 
     <header class="header">
       <nav class="header-nav">
@@ -30,7 +33,7 @@
             </ul>
           </li>
           <li class="menu-item multilinks">
-            <a href="#" class="menu-link uppercase">Главная</a>
+            <a href="#" class="menu-link bottom uppercase">Главная</a>
           </li>
         </ul>
       </nav>
@@ -46,7 +49,7 @@
       <div class="slide">
         <div class="slide-body">
           <div class="left-side">
-            <h3 class="title underlined mb">ВОЙТИ</h3>
+            <h3 class="big-title underlined mb">ВОЙТИ</h3>
 
             <div class="form-box">
               <form action="">
@@ -91,7 +94,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="footer-section-head" id="contacts">
-            <h3 class="title underlined">КОНТАКТЫ</h3>
+            <h3 class="big-title underlined">КОНТАКТЫ</h3>
           </div>
 
           <div class="footer-section-body">
@@ -111,7 +114,7 @@
 
         <div class="col-md-4">
           <div class="footer-section-head" id="faq">
-            <h3 class="title underlined">FAQ</h3>
+            <h3 class="big-title underlined">FAQ</h3>
           </div>
 
           <div class="footer-section-body">
@@ -128,7 +131,7 @@
 
         <div class="col-md-4">
           <div class="footer-section-head">
-            <h3 class="title underlined">ДОКУМЕНТЫ</h3>
+            <h3 class="big-title underlined">ДОКУМЕНТЫ</h3>
           </div>
 
           <div class="footer-section-body">
