--- a/main_new.html
+++ b/main_new.html
@@ -22,8 +22,8 @@
       <img class="logo-sm" src="assets/images/logo-sm.svg" alt="">
     </a>
 
-    <header class="header sm-header">
-      <nav class="header-nav sm-nav">
+    <header class="header">
+      <nav class="header-nav">
         <ul class="navigation">
           <li class="menu-item languages-menu">
             <span class="current-language">EN</span>
@@ -33,7 +33,7 @@
             </ul>
           </li>
           <li class="menu-item multilinks">
-            <a href="#" class="menu-link">ВОЙТИ</a>
+            <a href="#" class="menu-link bottom">ВОЙТИ</a>
             <a href="#" class="menu-link display-none">ЗАРЕГИСТРИРОВАТЬСЯ</a>
           </li>
         </ul>
@@ -51,12 +51,12 @@
         <div class="slide-body">
           <div class="left-side">
             <div class="title-place">
-              <h3 class="big-title">Открой мир искусства! </h3>
-              <h3 class="big-title white">Детские желания самые искренние, и если ты всегда хотел увидеть
+              <h3 class="big-description">Открой мир искусства! </h3>
+              <h3 class="big-description white">Детские желания самые искренние, и если ты всегда хотел увидеть
                 себя на экране
                 – не бойся идти к мечте!
               </h3>
-              <h3 class="big-title">Мы сделаем все, чтобы ты стал настоящей звездой!</h3>
+              <h3 class="big-description">Мы сделаем все, чтобы ты стал настоящей звездой!</h3>
             </div>
           </div>
 
@@ -72,9 +72,9 @@
         <div class="slide-body">
           <div class="left-side">
             <div class="title-place">
-              <h3 class="big-title">Создавай шедевры!</h3>
-              <h3 class="big-title white">Уверен в своих силах? Профессионал киноиндустрии?</h3>
-              <h3 class="big-title">Присоединяйся к лучшим проектам или собери свою команду мечты!</h3>
+              <h3 class="big-description">Создавай шедевры!</h3>
+              <h3 class="big-description white">Уверен в своих силах? Профессионал киноиндустрии?</h3>
+              <h3 class="big-description">Присоединяйся к лучшим проектам или собери свою команду мечты!</h3>
             </div>
           </div>
 
@@ -90,12 +90,12 @@
         <div class="slide-body">
           <div class="left-side">
             <div class="title-place">
-              <h3 class="big-title">Не трать свое время!</h3>
-              <h3 class="big-title white">Вы ищете команду, таланты, оборудование или локацию для съемок?
+              <h3 class="big-description">Не трать свое время!</h3>
+              <h3 class="big-description white">Вы ищете команду, таланты, оборудование или локацию для съемок?
                 У нас есть все
                 – мы оптимизировали процесс поиска, чтобы ускорить вашу работу.
               </h3>
-              <h3 class="big-title">Достигнем вершин киноискусства вместе!</h3>
+              <h3 class="big-description">Достигнем вершин киноискусства вместе!</h3>
             </div>
           </div>
 
@@ -112,7 +112,7 @@
     <div class="controls">
       <div class="slides-control">
       </div>
-      <a href="#" class="button">ЗАРЕГИСТРИРОВАТЬСЯ</a>
+      <a href="#" class="button hover-white">ЗАРЕГИСТРИРОВАТЬСЯ</a>
     </div>
 
   </div>
@@ -139,7 +139,7 @@
       </p>
     </div>
 
-    <a href="#" class="button">ЗАРЕГИСТРИРОВАТЬСЯ</a>
+    <a href="#" class="button display-none">ЗАРЕГИСТРИРОВАТЬСЯ</a>
 
     <div class="shadow-layer first">
       <div class="shadow-layer-films">
@@ -289,7 +289,7 @@
 
 
     <div class="our-community-buttons">
-      <a href="#" class="button">ЗАРЕГИСТРИРОВАТЬСЯ</a>
+      <a href="#" class="button hover-white">ЗАРЕГИСТРИРОВАТЬСЯ</a>
       <a href="#" class="button black-btn">ВОЙТИ</a>
     </div>
   </div>
@@ -421,8 +421,8 @@
 
 
   <div class="our-community-buttons">
-    <a href="#" class="button">ЗАРЕГИСТРИРОВАТЬСЯ</a>
-    <a href="#" class="button white">ВОЙТИ</a>
+    <a href="#" class="button hover-white">ЗАРЕГИСТРИРОВАТЬСЯ</a>
+    <a href="#" class="button black-btn">ВОЙТИ</a>
   </div>
 </div>
 
@@ -430,7 +430,7 @@
 <div class="container">
   <div class="auditory-box" id="auditory">
     <div class="auditory-head">
-      <h3 class="title underlined">НАША АУДИТОРИЯ</h3>
+      <h3 class="big-title underlined">НАША АУДИТОРИЯ</h3>
     </div>
 
     <div class="auditory-carts">
@@ -442,7 +442,7 @@
             </div>
 
             <div class="cart-info">
-              <h3 class="title small red">ТАЛАНТ</h3>
+              <h3 class="title small red">ТАЛАНТов</h3>
 
               <div class="cart-description">
                 <p class="white">актер, певец, танцор, акробат, модель, каскадер</p>
@@ -450,7 +450,7 @@
             </div>
 
             <div class="cart-login-button">
-              <a href="#" class="button">ЗАРЕГИСТРИРОВАТЬСЯ</a>
+              <a href="#" class="button display-none">ЗАРЕГИСТРИРОВАТЬСЯ</a>
 
             </div>
           </div>
@@ -462,7 +462,7 @@
             </div>
 
             <div class="cart-info">
-              <h3 class="title small red">КИНОДЕЯТЕЛЬ</h3>
+              <h3 class="title small red">КИНОДЕЯТЕЛей</h3>
 
               <div class="cart-description">
                 <p class="white">режиссер, оператор, композитор, сценарист, художник, гример, костюмер,
@@ -471,7 +471,7 @@
             </div>
 
             <div class="cart-login-button">
-              <a href="#" class="button">ЗАРЕГИСТРИРОВАТЬСЯ</a>
+              <a href="#" class="button display-none">ЗАРЕГИСТРИРОВАТЬСЯ</a>
             </div>
           </div>
         </div>
@@ -482,7 +482,7 @@
             </div>
 
             <div class="cart-info">
-              <h3 class="title small red">КОМПАНИЯ</h3>
+              <h3 class="title small red">КОМПАНИй</h3>
 
               <div class="cart-description">
                 <p class="white">кинокомпания, продакшн, ивент агенство, маркетинговое агентство,
@@ -491,7 +491,7 @@
               </div>
             </div>
             <div class="cart-login-button">
-              <a href="#" class="button">ЗАРЕГИСТРИРОВАТЬСЯ</a>
+              <a href="#" class="button display-none">ЗАРЕГИСТРИРОВАТЬСЯ</a>
             </div>
           </div>
         </div>
@@ -581,7 +581,7 @@
           </div>
           <div class="col-12 col-md-6">
             <div class="costs-right">
-              <h4 class="big-title fz15 uppercase gray-text">БАЗОВая подписка</h4>
+              <h4 class="big-title gray-underlined fz15 uppercase gray-text">БАЗОВая подписка</h4>
 
               <ul class="advantages-list">
                 <li>
@@ -605,72 +605,81 @@
           </div>
 
         </div>
-        <a href="#" class="button">ЗАРЕГИСТРИРОВАТЬСЯ</a>
+        <a href="#" class="button hover-white">ЗАРЕГИСТРИРОВАТЬСЯ</a>
 
       </div>
     </div>
 
 
     <div class="container">
-      <div class="advantages-box">
-        <div class="advantages-head">
-          <h3 class="big-title underlined red uppercase">Как платформа поможет кинодеятелям?</h3>
-          <span class="advantages-toggle-button"></span>
-        </div>
+      <div class="row">
+        <div class="col-12 col-md-9">
+          <div class="advantages-box">
+            <div class="advantages-head">
+              <h3 class="big-title underlined red uppercase">Как платформа поможет кинодеятелям?</h3>
+              <span class="advantages-toggle-button"></span>
+            </div>
 
-        <div class="advantages-body w100" style="display: none;">
-          <div class="costs-table-box">
+            <div class="advantages-body w100" style="display: none;">
+              <div class="costs-table-box">
 
-            <p class="text">
-              Вы сможете оперативно откликаться на новые вакансии от компаний и рассылать им свое
-              портфолио. На
-              платформу
-              можно залить шоурил, эскизы и информацию о прошлых проектах – одним словом, собрать все, что
-              у вас есть,
-              в
-              одном месте!
-            </p>
-            <p class="text">
-              В профайл Профессионала мы включили все пункты, которые обычно интересны опытному продюсеру.
-              Мы
-              позаботимся
-              о том, чтобы ваше портфолио было максимально полным и презентабельным.
-            </p>
+                <p class="text">
+                  Вы сможете оперативно откликаться на новые вакансии от компаний и рассылать им свое
+                  портфолио. На
+                  платформу
+                  можно залить шоурил, эскизы и информацию о прошлых проектах – одним словом, собрать все, что
+                  у вас есть,
+                  в
+                  одном месте!
+                </p>
+                <p class="text">
+                  В профайл Профессионала мы включили все пункты, которые обычно интересны опытному продюсеру.
+                  Мы
+                  позаботимся
+                  о том, чтобы ваше портфолио было максимально полным и презентабельным.
+                </p>
 
-            <p class="text red mt">35 999 т / за год</p>
+                <p class="text red mt">35 999 т / за год</p>
+              </div>
+            </div>
+
           </div>
         </div>
-
       </div>
+
     </div>
 
     <div class="container">
-      <div class="advantages-box">
-        <div class="advantages-head">
-          <h3 class="big-title underlined red uppercase">Как платформа поможет компании? </h3>
-          <span class="advantages-toggle-button"></span>
-        </div>
+      <div class="row">
+        <div class="col-12 col-md-9">
+          <div class="advantages-box">
+            <div class="advantages-head">
+              <h3 class="big-title underlined red uppercase">Как платформа поможет компании? </h3>
+              <span class="advantages-toggle-button"></span>
+            </div>
 
-        <div class="advantages-body w100" style="display: none;">
-          <div class="costs-table-box">
+            <div class="advantages-body w100" style="display: none;">
+              <div class="costs-table-box">
 
-            <p class="text">
-              Став участником сообщества, ваша компания сможет размещать вакансии и объявлять о кастингах.
-              Создавать
-              проекты, формировать съемочные группы и актерские ансамбли, готовить драфтовые подборы для
-              тендеров – и
-              все это на одной платформе!
-            </p>
-            <p class="text">
-              Но что самое главное, вам больше не придется тратить время на поиски нужных людей. У нас
-              самая большая и
-              обновляемая база казахстанских талантов, которой вы получите полный доступ!
-            </p>
+                <p class="text">
+                  Став участником сообщества, ваша компания сможет размещать вакансии и объявлять о кастингах.
+                  Создавать
+                  проекты, формировать съемочные группы и актерские ансамбли, готовить драфтовые подборы для
+                  тендеров – и
+                  все это на одной платформе!
+                </p>
+                <p class="text">
+                  Но что самое главное, вам больше не придется тратить время на поиски нужных людей. У нас
+                  самая большая и
+                  обновляемая база казахстанских талантов, которой вы получите полный доступ!
+                </p>
 
-            <p class="text red mt">35 999 т / за год</p>
+                <p class="text red mt">192 999 т / за год</p>
+              </div>
+            </div>
+
           </div>
         </div>
-
       </div>
     </div>
 
