--- a/registration.html
+++ b/registration.html
@@ -25,7 +25,10 @@
 
 <div class="container container-disable-on-mobile">
     <div class="header-box">
-        <a href="#" class="link-to-home"><img src="assets/images/logo.svg" alt=""></a>
+        <a href="#" class="link-to-home">
+            <img class="logo-desc" src="assets/images/logo.svg" alt="">
+            <img class="logo-sm" src="assets/images/logo-sm.svg" alt="">
+        </a>
 
         <header class="header">
             <nav class="header-nav">
@@ -38,7 +41,7 @@
                         </ul>
                     </li>
                     <li class="menu-item multilinks">
-                        <a href="#" class="menu-link uppercase">Главная</a>
+                        <a href="#" class="menu-link bottom uppercase">Главная</a>
                     </li>
                 </ul>
             </nav>
@@ -54,13 +57,11 @@
             <div class="slide">
                 <div class="slide-body">
                     <div class="left-side">
-                        <h3 class="title underlined mb uppercase">регистрация</h3>
+                        <h3 class="big-title underlined mb uppercase">регистрация</h3>
 
                         <div class="form-box">
                             <form action="">
                                 <div class="inputs">
-                                    <input type="text" placeholder="ваше имя">
-                                    <input type="text" placeholder="ваша фамилия">
                                     <input type="email" placeholder="email">
                                     <input type="password" placeholder="пароль">
                                     <input type="password" placeholder="подтвердите пароль">
@@ -73,12 +74,12 @@
                                     </div>
                                 </div>
 
-                                <h3 class="title underlined mb uppercase">Выберите род вашей деятельности</h3>
+                                <h3 class="big-title underlined mb uppercase">Выберите род вашей деятельности</h3>
 
                                 <div class="careers-checkbox">
                                     <div class="careers">
                                         <div class="row">
-                                            <div class="col-12 col-md-4">
+                                            <div class="col-12 col-lg-4">
 
                                                 <div class="career">
                                                     <input type="radio" id="talent1" name="activity" value="talent">
@@ -88,7 +89,7 @@
                                                 </div>
                                             </div>
 
-                                            <div class="col-12 col-md-4">
+                                            <div class="col-12 col-lg-4">
                                                 <div class="career">
                                                     <input type="radio" id="talent2" name="activity" value="talent">
                                                     <label class="red" for="talent2">кинодеятель</label>
@@ -98,7 +99,7 @@
                                                 </div>
                                             </div>
 
-                                            <div class="col-12 col-md-4">
+                                            <div class="col-12 col-lg-4">
                                                 <div class="career">
                                                     <input type="radio" id="talent3" name="activity" value="talent">
                                                     <label class="red" for="talent3">компания</label>
@@ -145,7 +146,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="footer-section-head" id="contacts">
-                        <h3 class="title underlined">КОНТАКТЫ</h3>
+                        <h3 class="big-title underlined">КОНТАКТЫ</h3>
                     </div>
 
                     <div class="footer-section-body">
@@ -167,7 +168,7 @@
 
                 <div class="col-md-4">
                     <div class="footer-section-head" id="faq">
-                        <h3 class="title underlined">FAQ</h3>
+                        <h3 class="big-title underlined">FAQ</h3>
                     </div>
 
                     <div class="footer-section-body">
@@ -187,7 +188,7 @@
 
                 <div class="col-md-4">
                     <div class="footer-section-head">
-                        <h3 class="title underlined">ДОКУМЕНТЫ</h3>
+                        <h3 class="big-title underlined">ДОКУМЕНТЫ</h3>
                     </div>
 
                     <div class="footer-section-body">
